# soap-bubble-project

./: README.md
_deprecated_/soap-bubble-machine/data/: wifimanager.html
soap-bubble-firmware/: Cargo.toml  README.md
soap-bubble-firmware/.cargo/: config.toml
soap-bubble-firmware/src/: http_server.rs  main.rs  wifi_connection.rs
soap-bubble-machine/: platformio.ini
soap-bubble-machine/data/: index.html
soap-bubble-machine/src/: main.cpp
soap-bubble-operator/: Dockerfile  Makefile  PROJECT  README.md  go.mod  go.sum
soap-bubble-operator/api/v1alpha1/: groupversion_info.go  soapbubblemachine_types.go  zz_generated.deepcopy.go
soap-bubble-operator/cmd/: main.go
soap-bubble-operator/cmd/di/: di_common_services.go  di_soap_bubble_services.go
soap-bubble-operator/config/crd/: kustomization.yaml
soap-bubble-operator/config/default/: kustomization.yaml  metrics_service.yaml
soap-bubble-operator/config/manager/: manager.yaml
soap-bubble-operator/config/network-policy/: allow-metrics-traffic.yaml
soap-bubble-operator/config/prometheus/: monitor.yaml
soap-bubble-operator/config/rbac/: kustomization.yaml  leader_election_role.yaml  leader_election_role_binding.yaml  role.yaml  role_binding.yaml  service_account.yaml  soapbubblemachine_editor_role.yaml  soapbubblemachine_viewer_role.yaml
soap-bubble-operator/config/samples/: bubble-low-speed.yaml  bubble-off.yaml  bubble-on.yaml  kustomization.yaml  soap-bubble-operator_v1alpha1_soapbubblemachine.yaml
soap-bubble-operator/internal/controller/: soapbubblemachine_controller.go  suite_test.go  (+1 more)
(+25 files in other folders)
