[package]
name = "soap-bubble-firmware"
version = "0.1.0"
authors = ["Antonio Martínez <antonio@weffective.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "soap-bubble-firmware"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
esp-idf-svc = { version = "0.51", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
esp-idf-hal = "0.45.2"
embedded-svc = { version = "0.28", default-features = false }
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }
anyhow = "1"

[build-dependencies]
embuild = "0.33"
